--- a/assets/css/matrixstyle.css
+++ b/assets/css/matrixstyle.css
@@ -40,7 +40,7 @@ body::-webkit-scrollbar-thumb {
   position: sticky;
   top: 0;
   z-index: 999;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .logo img {
@@ -220,8 +220,8 @@ a {
 .text-marquee {
   overflow: hidden;
   position: relative;
-  background-color: #000;
-  color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #00ff00;
   padding: 10px;
   margin-bottom: 10px;
 }
@@ -231,7 +231,7 @@ a {
   top: 0;
   left: 100%;
   white-space: nowrap;
-  animation: marquee 15s linear infinite;
+  animation: marquee 7s linear infinite;
 }
 
 @keyframes marquee {
@@ -239,7 +239,6 @@ a {
     left: 100%;
   }
   100% {
-    left: 0;
+    transform: translateX(-100%);
   }
 }
-
