--- a/assets/css/matrixstyle.css
+++ b/assets/css/matrixstyle.css
@@ -236,9 +236,15 @@ a {
 
 @keyframes marquee {
   0% {
-    left: 100%;
+    right: 100%;
+    transform: translateX(100%);
+  }
+  85% {
+    right: 0;
+    transform: translateX(0);
   }
   100% {
+    right: -100%;
     transform: translateX(-100%);
   }
 }
