--- a/assets/css/matrixstyle.css
+++ b/assets/css/matrixstyle.css
@@ -231,20 +231,15 @@ a {
   top: 0;
   left: 100%;
   white-space: nowrap;
-  animation: marquee 7s linear infinite;
+  animation: marquee 8s linear infinite;
+  animation-fill-mode: forwards;
 }
 
 @keyframes marquee {
   0% {
-    right: 100%;
-    transform: translateX(100%);
-  }
-  85% {
-    right: 0;
-    transform: translateX(0);
+    left: 100%;
   }
   100% {
-    right: -100%;
-    transform: translateX(-100%);
+    left: -100%;
   }
 }
